css/style.css
/*
Template Name: Bako
Version: 1.0
Author: PxlSolutions
Author URI: http://themeforest.net/user/pxlsolutions
Description: Personal Portfolio & Resume HTML Template

[TABLE OF CONTENTS]

01. Base
02. Typography
03. Header
04. Skills
05. Portfolio
06. Clients
07. Blog
08. Helper
09. Buttons
10. Preloader
11. Bootstrap Elements
12. Theme Elements
13. Slick Settings
14. Responsive Settings

*/
@import url("https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i");
@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i&amp;display=swap&amp;subset=cyrillic-ext");

/* Dark Mode */

:root {
    --bg-white-color: #fff;
    --bg-blue-color: #4a63e7;
    --body-color: #f6f7ff;
    --shadow-color: 0 6px 15px 0 rgba(74, 99, 231, .2)
}

[data-theme=dark] {
    --bg-white-color: #4b4b4b;
    --bg-blue-color: #1c2129;
    --body-color: #222831;
    --shadow-color: 0 6px 15px 0 rgba(0, 0, 0, .2)
}

/*=================================================================*/
/*                      BASE                              
/*=================================================================*/
body {
    color: #888;
    background-color: var(--body-color);
    font-family: "Open Sans", sans-serif;
    font-size: 14px;
    line-height: 1.7;
    overflow-x: hidden;
}

img {
    max-width: 100%;
    height: auto;
}

.text-center {
    text-align: center;
}

.text-left {
    text-align: left;
}

.text-right {
    text-align: right;
}

.text-dark {
    color: #000 !important;
}

.relative {
    position: relative;
}

.color-white {
    color: #FFF;
}

.color-white h1,
.color-white h2,
.color-white h3,
.color-white h4,
.color-white h5,
.color-white h6 {
    color: #FFF;
}

.background-blue {
    background: var(--bg-blue-color);
}

/*=================================================================*/
/*                      TYPOGRAPHY                              
/*=================================================================*/
h1,
h2,
h3,
h4,
h5,
h6 {
    color: #000;
    font-family: "Poppins", sans-serif;
    font-weight: 700;
    margin: 20px 0;
}

h1 {
    font-size: 36px;
}

h2 {
    font-size: 30px;
}

h3 {
    font-size: 24px;
}

h4 {
    font-size: 18px;
}

a {
    color: #000;
    outline: 0;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

a:hover {
    color: #FF5959;
    text-decoration: none;
}

a:focus {
    outline: 0;
}

blockquote {
    padding: 20px 20px;
    margin: 0 0 20px;
    font-size: 16px;
    background: #F7F7F7;
    border-radius: 10px;
}

blockquote p {
    line-height: 1.6;
}

/* === Pre === */
pre {
    display: block;
    padding: 9.5px;
    margin: 0 0 10px;
    font-size: 13px;
    line-height: 1.42857143;
    color: #333;
    word-break: break-all;
    word-wrap: break-word;
    background-color: #f5f5f5;
    border: 1px solid #ccc;
    border-radius: 0;
}

::selection {
    color: #FFF;
    background: #FF5959;
}

::-moz-selection {
    color: #FFF;
    background: #FF5959;
}

.z-1 {
    z-index: 1;
}

.row {
    margin-right: -10px;
    margin-left: -10px;
}

.col,
.col-1,
.col-10,
.col-11,
.col-12,
.col-2,
.col-3,
.col-4,
.col-5,
.col-6,
.col-7,
.col-8,
.col-9,
.col-auto,
.col-lg,
.col-lg-1,
.col-lg-10,
.col-lg-11,
.col-lg-12,
.col-lg-2,
.col-lg-3,
.col-lg-4,
.col-lg-5,
.col-lg-6,
.col-lg-7,
.col-lg-8,
.col-lg-9,
.col-lg-auto,
.col-md,
.col-md-1,
.col-md-10,
.col-md-11,
.col-md-12,
.col-md-2,
.col-md-3,
.col-md-4,
.col-md-5,
.col-md-6,
.col-md-7,
.col-md-8,
.col-md-9,
.col-md-auto,
.col-sm,
.col-sm-1,
.col-sm-10,
.col-sm-11,
.col-sm-12,
.col-sm-2,
.col-sm-3,
.col-sm-4,
.col-sm-5,
.col-sm-6,
.col-sm-7,
.col-sm-8,
.col-sm-9,
.col-sm-auto,
.col-xl,
.col-xl-1,
.col-xl-10,
.col-xl-11,
.col-xl-12,
.col-xl-2,
.col-xl-3,
.col-xl-4,
.col-xl-5,
.col-xl-6,
.col-xl-7,
.col-xl-8,
.col-xl-9,
.col-xl-auto {
    padding-right: 10px;
    padding-left: 10px;
}

/*=================================================================*/
/*                      HEADER                              
/*=================================================================*/
header.left {
    color: #FFF;
    background: var(--bg-blue-color);
    border-radius: 20px;
    min-height: 620px;
    max-height: 620px;
    top: 50px;
    overflow: hidden;
    position: fixed;
    width: 265px;
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    -o-transform: translateX(0);
    transform: translateX(0);
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

header.left nav {
    margin-top: 40px;
}

header.left .header-inner {
    width: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 30px;
    position: absolute;
}

header.left .mCustomScrollBox {
    width: 100%;
    overflow: visible;
}

header.left .mCSB_inside>.mCSB_container {
    margin-right: 0;
    min-height: 99.91%;
    overflow: visible;
    -ms-flex-align: start !important;
    align-items: flex-start !important;
    -ms-flex-direction: column !important;
    flex-direction: column !important;
    display: -ms-flexbox !important;
    display: flex !important;
}

header.left .mCSB_scrollTools {
    top: 20px;
    right: -10px;
    bottom: 20px;
}

header.left button.close {
    display: none;
    outline: none;
    padding: 0;
    background-color: #FFF;
    border: 0;
    -webkit-appearance: none;
    opacity: 1;
    color: #FF5959;
    font-weight: 400;
    font-size: 16px;
    border-radius: 50%;
    width: 20px;
    height: 20px;
    line-height: 22px;
    margin-top: 16px;
    margin-right: 18px;
    position: relative;
    z-index: 1;
}

header a {
    color: #FFF;
}

header a:hover {
    color: #FFF;
    text-decoration: none;
}

header .site-title {
    display: block;
    font-size: 28px;
    font-weight: 700;
}
/* ... */

